<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settingfrag"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_back_to_main"
            android:textSize="24sp"
            android:background="@drawable/bg_round"
            android:padding="16dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/light_green"/>

        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_sleep_time_in_second"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/download_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_round"
            android:backgroundTint="@color/light_green"
            android:padding="16dp"
            android:text="@string/run"
            android:layout_marginBottom="150dp"
            android:textSize="24sp" />

    </LinearLayout>



</LinearLayout>